--- a/css/main.css
+++ b/css/main.css
@@ -155,15 +155,17 @@ cap {
 }
 
 .feat {
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 .sub {
- text-align: right;
+    text-align: right;
     padding: 0 1em;
+    color: #48459C;
 }
+
 
 @media only screen and (min-width:20em) {
     
@@ -174,11 +176,4 @@ cap {
     .nav li {
         display: inline-block;
     }
-    
-    .feat {
-    width: 26.6666%;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-    
 }
