--- a/css/main.css
+++ b/css/main.css
@@ -299,7 +299,6 @@ button{
     width: 40%;
     color: #fff;
     font-size: 1em;
-    padding: 1em;
 }
 
 
@@ -388,6 +387,8 @@ button:hover {
 .thanks {
     font-family: "lato", sans-serif;
     color: #53ADE1;
+    text-align: center;
+    margin-top: 1em;
 }
 @media only screen and (min-width:20em) {
     .billboard {
