--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,17 @@ button:hover {
     text-align: center;
     margin-top: 1em;
 }
+
+.received {
+    text-align: center;
+}
+
+.check {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
 @media only screen and (min-width:20em) {
     .billboard {
         height: 15em;
@@ -417,12 +428,18 @@ button:hover {
 @media only screen and (min-width:26em){
     
     .billcap {
-    font-size: 1em;
-    height: 12em;
+        font-size: 1em;
+        height: 12em;
     }
     
     .cap {
         display: block;
+    }
+    
+    .check {
+        width: 20%;
+        margin-left: 40%;
+        margin-right: 40%;
     }
     
 }
@@ -488,7 +505,6 @@ button:hover {
     }
     
     .join {
-    font-size: 3em;
-    }
-    
+        font-size: 3em;
+    }   
 }
