--- a/css/main.css
+++ b/css/main.css
@@ -358,17 +358,16 @@ button:hover {
 .price {
     font-size: 2em;
     position: relative;
-    margin-top: 3.75em;
     text-align: center;
     border: solid 1px #fff;
     border-radius: 100px;
     background-color: #fff;
+    overflow: hidden;
 }
 
 .price1 {
     font-size: 2em;
     position: relative;
-    margin-top: 2em;
     text-align: center;
     border: solid 1px #fff;
     border-radius: 100px;
@@ -378,7 +377,6 @@ button:hover {
 .price2 {
     font-size: 2em;
     position: relative;
-    margin-top: .85em;
     text-align: center;
     border: solid 1px #fff;
     border-radius: 100px;
